1)加入面试第三方观看功能 2)支持面试双方和第三方p2p和fms集中两种模式，p2p为最高优先级，自动切换

--- a/src/VPInvite.mxml
+++ b/src/VPInvite.mxml
@@ -21,7 +21,7 @@
 			// please insert your web service URL here for exchanging peer ID
 			// private const WebServiceUrl:String = "http://www.shiyishi.cn/reg/index.do";
 			//test
-			private const WebServiceUrl:String = "http://www.localshiyishi.cn/reg/index.do";
+			private const WebServiceUrl:String = "http://www.shiyishi.cn/reg/index.do";
 			//test
 			
 			// this is the connection to rtmfp server
