p2p fms模式自动切换，加入第三方观看，解决第三方观看时视频卡住问题

--- a/src/VPInvite.mxml
+++ b/src/VPInvite.mxml
@@ -90,7 +90,7 @@
 				if (msg.length != 0 && companyStream)
 				{
 					textOutputDisplay('嘉宾' + ": " + msg);
-					netConnection.call('relay', null, companyId, 'sms', msg);
+					netConnection.call('relay', null, companyId, 'sms', '嘉宾' + ": " + msg);
 					textInput.text = "";
 				}
 			}
