登录页面添加"邀请码"字样

--- a/src/VPInvite.mxml
+++ b/src/VPInvite.mxml
@@ -211,13 +211,18 @@
 		<s:VGroup paddingLeft.login="130" paddingTop.login="80">
 			<s:Label id="msg" includeIn="login" width="125" height="16" color="#F73A0E"/>
 			<s:HGroup>
-				<s:Label text="昵称" color="0xFFFFFF">
+				<s:Label text="昵称" width="40" color="0xFFFFFF">
 					
 				</s:Label>
 				<s:TextInput id="visitorName" includeIn="login" width="97"/>
 			</s:HGroup>
+			<s:HGroup>
+				<s:Label text="邀请码" width="40" color="0xFFFFFF">
+					
+				</s:Label>
+				<s:TextInput id="inviteCode" includeIn="login" width="97" focusIn="clearTxt()"/>
+			</s:HGroup>
 
-			<s:TextInput id="inviteCode" includeIn="login" focusIn="clearTxt()"/>
 			<s:HGroup includeIn="login" width="126" height="28">
 				<s:Spacer includeIn="login" width="20" height="17"/>
 				<s:Button includeIn="login" label="登陆" click="login()"/>
